# pipo-transmuter-youtube

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-bake.hcl  dockerfile-bake.hcl  otel-collector-config.example.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  python.yml  rebase_dependencies.yml
docs/: conf.py
pipo_transmuter_youtube/: .secrets.yaml  __main__.py  _queues.py  app.py  config.py  handler.py  settings.yaml  telemetry.py
pipo_transmuter_youtube/models/: __init__.py
tests/: conftest.py  constants.py
tests/integration/: test_health_probes.py  test_transmute_playlist.py  test_transmute_query.py  test_transmute_url.py
tests/unit/: test_pytest.py  test_youtube.py  test_youtube_query.py
